--- a/dash.html
+++ b/dash.html
@@ -43,6 +43,26 @@
 
     </div>
     <div class="row">
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-content black-text">
+            <span class="card-title">Card Title</span>
+            <p>I am a very simple card. I am good at containing small bits of information.
+            I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div> <!-- end of col -->
+      
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-content black-text">
+            <span class="card-title">Card Title</span>
+            <p>I am a very simple card. I am good at containing small bits of information.
+            I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div> <!-- end of col -->
+
 
     </div>
 
