--- a/dash.html
+++ b/dash.html
@@ -39,6 +39,9 @@
               <span class="card-title">Map</span>
               <div id='map' style='width:100%; height:63%;'></div>
             </div>
+            <div style='float:left'>
+              <div style="padding:5px;background-color:'red'"></div>
+            </div>
           </div>
         </div> <!-- end of col -->
 
@@ -75,9 +78,33 @@
     axios.get('https://www.trackcorona.live/api/countries')
       .then(response => {
         buildList(response.data.data);
+        mapAlgo(response.data.data);
       })
 
-    mapIt();
+    //mapIt();
+
+    function mapAlgo(response) {
+      var map = L.map('map').setView([20, 0], 2);
+
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+      }).addTo(map);
+
+      for (i=0; i<response.length; i++){
+        let lat = response[i].latitude;
+        let lon = response[i].longitude;
+        var radius = parseInt(response[i].dead) * 2;
+        var popup = "<h6>" + response[i].location + "</h6><p>" + response[i].dead + "</p>";
+        if (i<10) {
+          var c = 'red';
+        } else if (i >= 10 && i<150){
+          var c = 'orange';
+        } else {
+          var c = 'yellow';
+        }
+        L.circle([lat, lon],{color:c, radius}).addTo(map).bindPopup(popup);
+      }
+    }
 
     function mapIt() {
       var map = L.map('map').setView([51.505, -0.09], 13);
