--- a/dash.html
+++ b/dash.html
@@ -1,20 +1,31 @@
+
 <html>
   <head>
+    <title>Dashboard</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js'></script>
+    <!-- Leaflet.js GIS links -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <!-- chart.js CDN-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
+    <style>
+      .card {
+        height: 550px;
+      }
+    </style>
   </head>
 
   <body>
+    <!-- Navbar from Materialize CSS -->
     <nav>
-      <div class="nav-wrapper black white-text">
-        <a href="#" class="brand-logo">Dashboard</a>
+      <div class="nav-wrapper red darken-2 white-text">
+        <a href="#" class="brand-logo" style='padding-left:10px;'>Dashboard</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
           <li><a href="badges.html">Components</a></li>
@@ -24,64 +35,109 @@
     </nav>
 
     <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-content black-text">
-              <span class="card-title">Top 10 COVID deaths</span>
-              <div id='output'></div>
-            </div>
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Top 10 COVID deaths</span>
+            <div id='output'></div>
           </div>
-        </div> <!-- end of col -->
-
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-content black-text">
-              <span class="card-title">Map</span>
-              <div id='map' style='width:100%; height:63%;'></div>
-            </div>
-            <div style='float:left'>
-              <div style="padding:5px;background-color:'red'"></div>
-            </div>
+        </div>
+      </div> <!-- end of col -->
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Map</span>
+            <div id="map" style="width:100%; height:75%;"></div>
           </div>
-        </div> <!-- end of col -->
+        </div>
 
-
-    </div>
+      </div> <!-- end of col -->
+    </div> <!-- end of 1st row -->
     <div class="row">
       <div class="col s12 m6">
         <div class="card">
-          <div class="card-content black-text">
-            <span class="card-title">Card Title</span>
-            <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content">
+            <span class="card-title">Bar Chart</span>
+            <canvas id="bar-chart" width="100%" height="86.5%"></canvas>
           </div>
         </div>
       </div> <!-- end of col -->
-
       <div class="col s12 m6">
         <div class="card">
-          <div class="card-content black-text">
-            <span class="card-title">Card Title</span>
-            <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
+          <div class="card-content">
+            <span class="card-title">Pie Chart</span>
+            <canvas id="pie-chart" width="800" height="450"></canvas>
           </div>
         </div>
       </div> <!-- end of col -->
-
-
-    </div>
+    </div> <!-- end of 2nd row -->
 
   </body>
 
   <script>
 
+
     axios.get('https://www.trackcorona.live/api/countries')
       .then(response => {
-        buildList(response.data.data);
+        console.log(response.data.data);
+        buildList(response.data.data); // call the buildList function
         mapAlgo(response.data.data);
+        barChart(response.data.data);
+        pieChart();
       })
 
-    //mapIt();
+    function pieChart() {
+      new Chart(document.getElementById("pie-chart"), {
+          type: 'pie',
+          data: {
+            labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+            datasets: [{
+              label: "Population (millions)",
+              backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+              data: [2478,5267,734,784,433]
+            }]
+          },
+          options: {
+            title: {
+              display: true,
+              text: 'Predicted world population (millions) in 2050'
+            }
+          }
+      });
+    }
+
+    function barChart(cdata) {
+      // Bar chart
+
+      var labarray = [];
+      var dataarray = [];
+      for (i=0; i<10; i++) {
+        labarray.push(cdata[i].location);
+        dataarray.push(cdata[i].dead);
+      }
+      new Chart(document.getElementById("bar-chart"), {
+          type: 'bar',
+          data: {
+            labels: labarray,
+            datasets: [
+              {
+                label: "Population (millions)",
+                backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850","#089acf","#cf0829","#81fc8b","#e8ff69","#952eb8"],
+                data: dataarray
+              }
+            ]
+          },
+          options: {
+            legend: { display: false },
+            title: {
+              display: true,
+              text: 'Predicted world population (millions) in 2050'
+            }
+          }
+      });
+    }
+
+    //mapIt(); // call mapIt() function
 
     function mapAlgo(response) {
       var map = L.map('map').setView([20, 0], 2);
@@ -90,31 +146,34 @@
           attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map);
 
-      for (i=0; i<response.length; i++){
-        let lat = response[i].latitude;
-        let lon = response[i].longitude;
-        var radius = parseInt(response[i].dead) * 2;
+      for (i=0;i<response.length;i++) {
+        var lat = response[i].latitude;
+        lon = response[i].longitude
+        var rad = parseInt(response[i].dead) * 2;
         var popup = "<h6>" + response[i].location + "</h6><p>" + response[i].dead + "</p>";
         if (i<10) {
           var c = 'red';
-        } else if (i >= 10 && i<150){
+        } else if (i >= 10 && i<150) {
           var c = 'orange';
-        } else {
+        } else if (i >= 150 && i<200) {
           var c = 'yellow';
+        } else {
+          var c = 'blue';
         }
-        L.circle([lat, lon],{color:c, radius}).addTo(map).bindPopup(popup);
+        L.circle([lat,lon],{color:c,radius:rad}).addTo(map).bindPopup(popup);
       }
+
     }
 
     function mapIt() {
-      var map = L.map('map').setView([51.505, -0.09], 13);
+      var map = L.map('map').setView([31.2304, 121.4737], 15);
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
           attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map);
 
-      L.marker([51.5, -0.09]).addTo(map)
-          .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
+      L.marker([31.2304, 121.4737]).addTo(map)
+          .bindPopup("<h6>Shanghai, China.</h6><br> <img src='http://www.asianews.it/files/img/size3/Shanghai_Pudong.jpg' style='width:150px'>")
           .openPopup();
     }
 
@@ -125,12 +184,13 @@
       data.sort(function (a, b) {
         return b.dead - a.dead;
       });
-      for (i=0; i<10; i++) {
-        myHTML = myHTML + '<li>' + data[i].location + "<span class='badge'>" + data[i].dead
-      }
 
-      myHTML = myHTML + '</ul>';
+      for (i=0; i<10; i++) {
+        myHTML = myHTML + "<li class='collection-item'>" + data[i].location + "<span class='badge'>" + data[i].dead + "</span></li>";
+      }
+      myHTML = myHTML + "</ul>"
       dHandle.innerHTML = myHTML;
     }
   </script>
+
 </html>
