--- a/dash.html
+++ b/dash.html
@@ -17,6 +17,18 @@
     <style>
       .card {
         height: 550px;
+        background-color: #88f7f7;
+      }
+      body {
+        margin: 20px;
+        background-color: #02b5b5;
+      }
+      #legend {
+        float:left;
+        display:inline;
+        color:white;
+        padding:10px;
+        margin: 5px;
       }
     </style>
   </head>
@@ -27,9 +39,7 @@
       <div class="nav-wrapper red darken-2 white-text">
         <a href="#" class="brand-logo" style='padding-left:10px;'>Dashboard</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+          <li><a href="https://www.trackcorona.live/api/countries">Source</a></li>
         </ul>
       </div>
     </nav>
@@ -38,7 +48,7 @@
       <div class="col s12 m6">
         <div class="card">
           <div class="card-content">
-            <span class="card-title">Top 10 COVID deaths</span>
+            <span class="card-title">Top 10 COVID Deaths</span>
             <div id='output'></div>
           </div>
         </div>
@@ -48,6 +58,7 @@
           <div class="card-content">
             <span class="card-title">Map</span>
             <div id="map" style="width:100%; height:75%;"></div>
+            <span style='float: left;font-size:2em; align-items: center;'>Legend</span><div id="legend" style="background-color:red;">top10</div><div id="legend" style="background-color:orange; ">10-100</div><div id="legend" style="background-color:yellow; ">100-200</div><div id="legend" style="background-color:blue; ">200+</div>
           </div>
         </div>
 
@@ -57,7 +68,7 @@
       <div class="col s12 m6">
         <div class="card">
           <div class="card-content">
-            <span class="card-title">Bar Chart</span>
+            <span class="card-title">Top 10 COVID Deaths</span>
             <canvas id="bar-chart" width="100%" height="86.5%"></canvas>
           </div>
         </div>
@@ -66,7 +77,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">Pie Chart</span>
-            <canvas id="pie-chart" width="800" height="450"></canvas>
+            <canvas id="pie-chart" width="100%" height="86.5%"></canvas>
           </div>
         </div>
       </div> <!-- end of col -->
@@ -83,24 +94,37 @@
         buildList(response.data.data); // call the buildList function
         mapAlgo(response.data.data);
         barChart(response.data.data);
-        pieChart();
+        pieChart(response.data.data);
       })
 
-    function pieChart() {
+    function pieChart(cdata) {
+
+      var total = 0;
+      for (i=3;i<cdata.length;i++) {
+        total = total + parseInt(cdata[i].dead);
+      }
+
+      var entire = total + parseInt(cdata[0].dead) + parseInt(cdata[1].dead) + parseInt(cdata[2].dead);
+      var percents = [];
+      for (i=0;i<3;i++) {
+        percents.push((parseInt(cdata[i].dead)/entire*100).toFixed(1));
+      }
+      percents.push((total/entire*100).toFixed(1));
+
       new Chart(document.getElementById("pie-chart"), {
           type: 'pie',
           data: {
-            labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+            labels: [cdata[0].location, cdata[1].location, cdata[2].location, "Rest of World"],
             datasets: [{
-              label: "Population (millions)",
+              label: "COVID Deaths",
               backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-              data: [2478,5267,734,784,433]
+              data: percents
             }]
           },
           options: {
             title: {
-              display: true,
-              text: 'Predicted world population (millions) in 2050'
+              display: false,
+              text: 'e'
             }
           }
       });
@@ -121,7 +145,7 @@
             labels: labarray,
             datasets: [
               {
-                label: "Population (millions)",
+                label: "COVID Deaths",
                 backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850","#089acf","#cf0829","#81fc8b","#e8ff69","#952eb8"],
                 data: dataarray
               }
@@ -130,8 +154,8 @@
           options: {
             legend: { display: false },
             title: {
-              display: true,
-              text: 'Predicted world population (millions) in 2050'
+              display: false,
+              text: ''
             }
           }
       });
@@ -150,12 +174,12 @@
         var lat = response[i].latitude;
         lon = response[i].longitude
         var rad = parseInt(response[i].dead) * 2;
-        var popup = "<h6>" + response[i].location + "</h6><p>" + response[i].dead + "</p>";
+        var popup = "<h6>" + response[i].location + "</h6><p>" + "confirmed: " + response[i].confirmed + "</p><p>" + "dead: " + response[i].dead + "</p>";
         if (i<10) {
           var c = 'red';
-        } else if (i >= 10 && i<150) {
+        } else if (i >= 10 && i<100) {
           var c = 'orange';
-        } else if (i >= 150 && i<200) {
+        } else if (i >= 100 && i<200) {
           var c = 'yellow';
         } else {
           var c = 'blue';
